opam-version: "2.0"
version: "v0.17.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/indentation_buffer"
bug-reports: "https://github.com/janestreet/indentation_buffer/issues"
dev-repo: "git+https://github.com/janestreet/indentation_buffer.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/indentation_buffer/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "5.1.0"}
  "core"     {>= "v0.17" & < "v0.18"}
  "ppx_jane" {>= "v0.17" & < "v0.18"}
  "dune"     {>= "3.11.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library for building strings with indentation"
description: "
A library for building strings with indentation
"
